# noz-cpp

./: .clang-format  .clangd  .gitignore  Application.nozsettings  CMakeLists.txt  CMakePresets.json  Editor.nozsettings  FarmerZ.nozproject  README.md  convert_mesh_to_sprite.sh  editor.cfg  noz.natvis  readme.md  todo.md
editor/: CMakeLists.txt  README.md  editor.cfg  editor.natvis
editor/.noz/: user.cfg
editor/assets/atlas/: atlas00.atlas  editor_atlas00.atlas  test.atlas
editor/assets/mesh/: icon_circle.mesh  icon_close.mesh  icon_edge_mode.mesh  icon_expand_down.mesh  icon_expand_up.mesh  icon_face_mode.mesh  icon_palette.mesh  icon_palette_0.mesh  icon_vertex_mode.mesh  icon_weight_mode.mesh
editor/assets/meshes/: asset_icon_atlas.mesh  asset_icon_lua.mesh  asset_icon_shader.mesh  icon_circle.mesh  icon_dropdown.mesh  icon_mirror.mesh  icon_opacity.mesh  icon_opacity_overlay.mesh  icon_publish.mesh  icon_submenu.mesh  icon_tiling.mesh
editor/assets/sdf/: test.sdf
editor/assets/shaders/: editor.glsl  editor_mesh.glsl  editor_texture.glsl  grid.glsl  postprocess_ui_composite.glsl  ui_vignette.glsl
editor/assets/sprite/: asset_icon_atlas.sprite  asset_icon_sound.sprite  icon_face_mode.sprite  icon_opacity_overlay.sprite  icon_palette.sprite  icon_weight_mode.sprite
editor/libs/glslang/: SPIRV-Tools-opt.lib  SPIRV-Tools-optd.lib  SPIRV-Toolsd.lib  SPIRV.lib  SPIRVd.lib  glslang.lib
editor/src/: asset_importer.h  asset_manifest.cpp  asset_manifest.h  asset_registry.cpp  asset_registry.h  build.cpp  command.cpp  document.cpp  document.h  document_def.cpp  document_def.h  editor.cpp  editor.h  editor_assets.cpp  editor_assets.h  editor_mesh_builder.cpp  editor_mesh_builder.h  editor_pch.h  editor_server.cpp  editor_types.h  file_watcher.cpp  gltf.cpp  gltf.h  grid.cpp  importer.cpp  inspector.cpp  notifications.cpp  nozed_assets.cpp  nozed_assets.h  pch.h  props.cpp  props.h  rect_packer.cpp  rect_packer.h  server.cpp  server.h  shader_reflect.cpp  shortcut.cpp  style.cpp  style.h  (+11 more)
editor/src/asset/: animated_mesh_data.cpp  animated_mesh_data.h  animated_mesh_editor.cpp  animation_data.cpp  animation_data.h  animation_editor.cpp  asset_data.cpp  asset_data.h  atlas_data.cpp  atlas_data.h  atlas_editor.cpp  atlas_manager.cpp  atlas_manager.h  bin_data.cpp  bin_data.h  event_data.cpp  event_data.h  font_data.cpp  font_data.h  lua_data.cpp  lua_data.h  mesh_data.cpp  mesh_data.h  mesh_editor.cpp  sdf_data.cpp  sdf_data.h  sdf_editor.cpp  shader_data.cpp  shader_data.h  skeleton_data.cpp  skeleton_data.h  skeleton_editor.cpp  sound_data.cpp  sound_data.h  texture_data.cpp  texture_data.h  texture_editor.cpp  vfx_data.cpp  vfx_data.h
editor/src/controls/: log_view_control.cpp  log_view_control.h  text_input.cpp
editor/src/document/: animation_doc.cpp  animation_doc.h  animation_editor.cpp  animation_importer.cpp  atlas_doc.cpp  atlas_doc.h  atlas_editor.cpp  atlas_importer.cpp  atlas_manager.cpp  atlas_manager.h  bin_doc.cpp  bin_doc.h  event_doc.cpp  event_doc.h  font_doc.cpp  font_doc.h  font_import.cpp  importer.cpp  lua_doc.cpp  lua_doc.h  lua_editor.cpp  lua_import.cpp  mesh_doc.cpp  mesh_doc.h  mesh_editor.cpp  mesh_geom.cpp  mesh_import.cpp  mesh_importer.cpp  shader_doc.cpp  shader_doc.h  shader_import.cpp  shader_importer.cpp  skeleton_doc.cpp  skeleton_doc.h  skeleton_editor.cpp  skeleton_importer.cpp  sound_doc.cpp  sound_doc.h  sound_import.cpp  sound_importer.cpp  (+10 more)
editor/src/import/: animated_mesh_importer.cpp  animation_importer.cpp  asset_importer.h  asset_manifest.cpp  asset_manifest.h  atlas_importer.cpp  bin_importer.cpp  event_importer.cpp  font_importer.cpp  importer.cpp  lua_importer.cpp  mesh_importer.cpp  sdf_importer.cpp  shader_importer.cpp  skeleton_importer.cpp  sound_importer.cpp  texture_importer.cpp  vfx_importer.cpp
editor/src/importers/: font_importer.cpp  mesh_importer.cpp  shader_importer.cpp  skeleton_importer.cpp  sound_importer.cpp  style_sheet_importer.cpp  texture_importer.cpp  vfx_importer.cpp
editor/src/msdf/: Contour.cpp  Contour.h  Edge.cpp  Edge.h  Math.cpp  Math.h  Shape.cpp  Shape.h  SignedDistance.cpp  SignedDistance.h  msdf.cpp  msdf.h
editor/src/platform/: agg_rasterizer.cpp  editor_platform.h
editor/src/shape/: shape.cpp  shape.h  shape_region.cpp
editor/src/tools/: auto_curve.cpp  box_select.cpp  curve.cpp  knife.cpp  move.cpp  pen.cpp  rotate.cpp  scale.cpp  select.cpp  vertex_weight.cpp  weight.cpp
editor/src/ttf/: TrueTypeFont.cpp  TrueTypeFont.h  TrueTypeFontReader.cpp  TrueTypeFontReader.h
editor/src/tui/: linux_terminal.cpp  linux_terminal.h  screen.cpp  screen.h  terminal.cpp  terminal.h  text_input.cpp  text_input.h  tstring.cpp  tstring.h  windows_terminal.cpp  windows_terminal.h
editor/src/ui/: ui_confirm.cpp  ui_context_menu.cpp  ui_help.cpp
editor/src/utils/: curve_utils.cpp  curve_utils.h  draw_utils.cpp  file_helpers.cpp  file_helpers.h  file_watcher.cpp  file_watcher.h  pixel_data.cpp  pixel_data.h  props.cpp  props.h  rasterizer.cpp  rasterizer.h  rect_packer.cpp  rect_packer.h  scanline_rasterizer.cpp  scanline_rasterizer.h  shader_reflect.cpp  shader_reflect.h  ui_utils.cpp
editor/src/views/: inspector_object.cpp  inspector_object.h  inspector_view.cpp  inspector_view.h  log_view.cpp  log_view.h  object_properties.h  properties_view.cpp  properties_view.h  test_tree_view.cpp  test_tree_view.h  tree_view.cpp  tree_view.h  view.cpp  view_interface.h  views.h
tools/icongen/: CMakeLists.txt
tools/icongen/src/: border.cpp  border.h  icongen.cpp  icongen_pch.h
tools/importer/: CMakeLists.txt
tools/importer/src/: AssetImporter.cpp  AssetImporter.h  FileWatcher.cpp  FileWatcher.h  GLTFLoader.cpp  GLTFLoader.h  ImportConfig.cpp  ImportConfig.h  ResourceImporter.cpp  ResourceImporter.h  asset_importer.h  asset_manifest.cpp  asset_manifest.h  hotload_server.cpp  hotload_server.h  importer.cpp  importer_main.cpp  importer_pch.h  noz_import.cpp  noz_import.h  shader_reflect.cpp  shader_reflect.h
tools/importer/src/importers/: AnimationBlendTree2DImporter.cpp  AnimationImporter.cpp  (+21 more)
(+1933 files in other folders)
